--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "battlemath",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jesserweigel.github.io/battlemath",
+  "homepage": "https://behlulettin.github.io/mat-oyun",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
