--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "battlemath",
+  "name": "mat-oyun",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://behlulettin.github.io/mat-oyun",
